<resources>
    <string name="app_name">My Application</string>
    <string name="artist_txt">Artist</string>
    <string name="title_txt">Title</string>
    <string name="chooseDir">Choose a new directory:</string>
    <string name="choose_txt">Choose</string>
    <string name="back_txt">Back</string>
    <string name="dialog_title">Replace directories</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_text">Some of your directories have been found to be subdirectories of the added one. Do you want to replace them?</string>
    <string name="toast_cannot_add">You already have songs from that directory!</string>
    <string name="current_playlist_txt">Current Playlist</string>
    <string name="add_to_txt">Add to</string>
    <string name="remove_txt">Remove</string>
    <string name="add_new_txt">Add New</string>
    <string name="remove_selected_txt">Remove Selected</string>
    <string name="add_text">Add</string>
    <string name="playlist_edittext_hint">Playlist Title</string>
    <string name="enter_title_text">Enter a title for the new playlist:</string>
    <string name="new_playlist_text">New Playlist</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="unshuffle_text">Unshuffle</string>
    <string name="by_text">by </string>
    <string name="incorrect_input">The title you entered is incorrect. Try again!</string>
    <string name="delete_playlist_dialog_title">Delete Playlist</string>
    <string name="delete_playlist_dialog_text">Are you sure you want to delete this playlist?</string>
    <string name="rename_playlist_dialog_title">Rename Playlist</string>
    <string name="rename_playlist_dialog_text">Enter a new title for the playlist.</string>
    <string name="playlists_text">Playlists</string>
    <string name="rename_text">Rename</string>
    <string name="list_is_empty_text">The list is empty.</string>
    <string name="no_directories_text">No directories have been added.</string>
    <string name="playlist_empty_text">The playlist is empty.</string>
    <string name="alert_dialog_add_to_title">Add Tracks</string>
    <string name="alert_dialog_add_to_message">Add selected tracks to: </string>
    <string name="ok">OK</string>
    <string name="remove_tracks_dialog_title">Remove Tracks</string>
    <string name="remove_tracks_dialog_message">Do you want to remove selected tracks from the playlist?</string>
    <string name="no_playlist_selected_alert">You haven\'t chosen any playlist.</string>
    <string name="new_playlist_alert_dialog">New playlist</string>
    <string name="delete_tracks_alert_title">Delete Tracks</string>
    <string name="delete_tracks_alert_message">Do you want to delete the selected tracks? (this action will remove tracks from your device\'s file system)</string>
    <string name="by_artist_text">By Artist</string>
    <string name="artists_text">Artists</string>
    <string name="albums_text">Albums</string>
    <string name="genres_text">Genres</string>
    <string name="album_text">Album</string>
    <string name="selected_playlist_text">Selected Playlist</string>
    <string name="search_text">Search</string>
    <string name="settings_text">Settings</string>
    <string name="access_error">Failed to retrieve a cursor. No tracks were added.</string>
    <string name="no_tracks_found">No tracks were found on this device.</string>
    <string name="zero_value">0:00</string>
    <string name="zero_out_of_zero_text">0/0</string>
    <string name="long_click_to_select_all_text">Long click any track to select all of them.</string>
    <string name="genre_text">Genre</string>
    <string name="shuffle_text">Shuffle</string>
    <string name="max_db_text">max db</string>
    <string name="min_db_text">min db</string>
    <string name="save_text">Save</string>
    <string name="presets_text">Presets</string>
    <string name="replace_text">Replace</string>
    <string name="eq_text">EQ</string>
    <string name="reverb_text">Reverb</string>
    <string name="etc_text">Etc</string>
    <string name="other_text">Other</string>
    <string name="bassboost_text">Bass Boost</string>
    <string name="new_text">New</string>
    <string name="misc_text">Misc</string>
    <string name="enabled_text">Enabled</string>
    <string name="generic_title">Title</string>
    <string name="generic_artist">Artist — Album</string>
</resources>
