<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/effectPresetSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TabLayout
        android:id="@+id/effectChoiceTabLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabItem
            android:id="@+id/eqTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eq_text" />

        <android.support.design.widget.TabItem
            android:id="@+id/reverbTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reverb_text" />

        <android.support.design.widget.TabItem
            android:id="@+id/otherEffectsTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misc_text" />
    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/effectFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <TableRow
        android:id="@+id/effectButtonRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cancelEffectButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_text" />

        <Button
            android:id="@+id/replaceEffectButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/replace_text" />

        <Button
            android:id="@+id/saveEffectStateButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_text" />

    </TableRow>

</LinearLayout>
