<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/currentPlaylistButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/current_playlist_txt"
        android:textAllCaps="false"
        android:textColor="#6d6d6d"
        android:textSize="14sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/selectedPlaylistTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/selected_playlist_text"
        android:textColor="@android:color/black"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/playlist_empty_text"
        android:visibility="gone" />

    <ListView
        android:id="@+id/trackListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="7dp">

    </ListView>

    <Button
        android:id="@+id/shuffleButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shuffle_text"
        android:visibility="gone" />

    <TableRow
        android:id="@+id/controlButtonsRow"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center">

        <Button
            android:id="@+id/cancelSelectionButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_text"
            android:textSize="12sp" />

        <Button
            android:id="@+id/addToButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_txt"
            android:textSize="12sp" />

        <Button
            android:id="@+id/removeTrackButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_txt"
            android:textSize="12sp" />

        <Button
            android:id="@+id/deleteTrackButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete"
            android:textSize="12sp" />
    </TableRow>

</LinearLayout>