<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/topButtonRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </TableRow>

        <ListView
            android:id="@+id/playlistsListView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="7dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomButtonRow"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <TableRow
            android:id="@+id/bottomButtonRow"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.028"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/addPlaylistButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_text"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="447dp" />

        </TableRow>

        <android.support.design.widget.TabLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tabLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0">

            <android.support.design.widget.TabItem
                android:id="@+id/playlistsTabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlists_text" />

            <android.support.design.widget.TabItem
                android:id="@+id/albumsTabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albums_text" />

            <android.support.design.widget.TabItem
                android:id="@+id/artistsTabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artists_text" />

            <android.support.design.widget.TabItem
                android:id="@+id/genresTabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres_text" />
        </android.support.design.widget.TabLayout>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>